Fix Docker Hub rate limit issue by installing ESP-IDF directly
- Remove Docker container dependency for ESP32 builds
- Install ESP-IDF v5.1.2 directly in the runner
- Avoid Docker Hub rate limiting issues
- Update both ci-cd.yaml and build-and-release.yaml workflows

--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -17,24 +17,36 @@ jobs:
   # Build ESP32 Firmware
   build-firmware:
     runs-on: jedarden-org-apexalgo-iad-runners
-    container:
-      image: espressif/idf:v5.1.2
     steps:
     - uses: actions/checkout@v4
       with:
         submodules: recursive
     
+    - name: Install ESP-IDF Prerequisites
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y git wget flex bison gperf python3 python3-pip python3-venv cmake ninja-build ccache libffi-dev libssl-dev dfu-util libusb-1.0-0
+    
+    - name: Install ESP-IDF
+      run: |
+        mkdir -p ~/esp
+        cd ~/esp
+        git clone -b v5.1.2 --recursive https://github.com/espressif/esp-idf.git
+        cd esp-idf
+        ./install.sh esp32,esp32s3
+    
     - name: Build ESP32 Firmware
       working-directory: csi-firmware
       run: |
-        . $IDF_PATH/export.sh
+        . ~/esp/esp-idf/export.sh
         idf.py build
     
     - name: Run Firmware Tests
       working-directory: csi-firmware
       run: |
-        . $IDF_PATH/export.sh
+        . ~/esp/esp-idf/export.sh
         cd test
+        chmod +x run_tests.sh
         ./run_tests.sh
     
     - name: Package Firmware
