--- a/csi-firmware/components/web_server/CMakeLists.txt
+++ b/csi-firmware/components/web_server/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(SRCS "src/web_server.c"
                        INCLUDE_DIRS "include" "src"
                        REQUIRES esp_http_server esp_wifi json nvs_flash
-                       PRIV_REQUIRES "unity" "csi_collector")
+                       PRIV_REQUIRES "unity" "csi_collector" "esp_timer")
