Fix component dependencies for OTA updater and NTP sync
- Add app_update, mbedtls, mqtt_client to OTA updater dependencies
- Add esp_timer to NTP sync dependencies
- Fixes missing header file errors

--- a/csi-firmware/components/ota_updater/CMakeLists.txt
+++ b/csi-firmware/components/ota_updater/CMakeLists.txt
@@ -17,4 +17,7 @@ idf_component_register(
         "nvs_flash"
     PRIV_REQUIRES
         "unity"
+        "app_update"
+        "mbedtls"
+        "mqtt_client"
 )
